[package]
name = "tape"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.65"
ext-php-rs = { version = "0.8", features = ["anyhow"]}
nom = "7.1.1"
nom_locate = "4.0.0"
rust_decimal = "1.26.1"

[dev-dependencies]
pretty_assertions = "1.3.0"

[lib]
crate-type = ["cdylib"]
